adding following and unfollowing feature
