# gamindie-ui/src/app/core/services/models.ts
@@ -14,12 +14,14 @@ export type { CommentRequest } from './models/comment-request';
 export type { CommentResponse } from './models/comment-response';
 export type { FriendShip } from './models/friend-ship';
 export type { FriendShipRequest } from './models/friend-ship-request';
+export type { FriendShipResponse } from './models/friend-ship-response';
 export type { GrantedAuthority } from './models/granted-authority';
 export type { LikeRequest } from './models/like-request';
 export type { Likes } from './models/likes';
 export type { Message } from './models/message';
 export type { MessageRequest } from './models/message-request';
 export type { PageResponseCommentResponse } from './models/page-response-comment-response';
+export type { PageResponseFriendShipResponse } from './models/page-response-friend-ship-response';
 export type { PageResponsePostResponse } from './models/page-response-post-response';
 export type { Post } from './models/post';
 export type { PostRequest } from './models/post-request';
