# gamindie-ui/src/app/modules/right/friend-requests/friend-requests.component.ts
@@ -1,7 +1,11 @@
 import { CommonModule } from '@angular/common';
-import { Component } from '@angular/core';
+import { Component, effect, inject, OnInit } from '@angular/core';
 import { AngularSvgIconModule } from 'angular-svg-icon';
-import { FriendShip } from '../../../core/services/models';
+import { FriendShipRequest, FriendShipResponse, UserResponse } from '../../../core/services/models';
+import { FriendShipControllerService } from '../../../core/services/services';
+import { acceptFriendRequest, getUserPendingFriendShip, sendFriendRequest } from '../../../core/services/commun_fn/FriendShip_fn';
+import { AuthContext } from '../../../shared/contexts/auth-context';
+import { ActivatedRoute } from '@angular/router';
 
 
 @Component({
@@ -10,42 +14,67 @@ import { FriendShip } from '../../../core/services/models';
   templateUrl: './friend-requests.component.html',
   styleUrl: './friend-requests.component.scss'
 })
-export class FriendRequestsComponent {
+export class FriendRequestsComponent implements OnInit {
+
   
-  friendRequests: FriendShip[] = [
-    {
-      id: 1,
-      sender: {
-        id: 1,
-        username: 'JohnDoe',
-        profilePicture: ''
-      },
-      receiver: {
-        id: 2,
-        username: 'JaneDoe',
-        profilePicture: ''
-      },
-      status: 'pending'
-    },
-    {
-      id: 2,
-      sender: {
-        id: 3,
-        username: 'Alice',
-        profilePicture: ''
-      },
-      receiver: {
-        id: 4,
-        username: 'JaneDoe',
-        profilePicture: ''
-      },
-      status: 'pending'
+    private authContext = inject(AuthContext);
+  
+    userSignal = this.authContext.user;
+    isLoading = this.authContext.isLoading;
+  
+    user: UserResponse | null = null;
+  
+  friendRequests: FriendShipResponse[] = [];
+
+  constructor(
+    private friendShipService: FriendShipControllerService,
+  ) {
+    effect(() => {
+      this.getUserValue();
+      if (this.user?.id) { 
+        this.getPengindFriendShips();
+      }
+    });
+    
+   }
+
+  ngOnInit(): void {
+    
+  }
+
+  getUserValue() {
+    if (this.isLoading()) {
+      return;
     }
-  ]
+    this.user = this.userSignal();
+  }
+
+
+  async getPengindFriendShips(): Promise<void> {
+    if(this.user?.id === undefined) return ;
+    this.friendRequests = await getUserPendingFriendShip(this.friendShipService,this.user?.id,0);
+    
+  }
+
+  async acceptFriendRequest(friendShipId: number|undefined): Promise<void> {
+    if(friendShipId === undefined) return ;
+    await acceptFriendRequest(this.friendShipService, friendShipId);
+    this.getPengindFriendShips();
+  }
+
+  getProfileUrl(profilePicture:String|undefined): string {
+    const baseURL = "http://localhost:3000/";
+
+    // Remove leading './' or extra slashes
+    const cleanPath = profilePicture?.replace(/\\/g, '/').replace(/^\.?\//, '').replace(/\/+/g, '/') ?? '';
+    return  baseURL + cleanPath;
+    
+
+  }
+
   
 
   handleFollowBack(requestId: number): void {
-    console.log('Following back user with ID:', requestId);
-    this.friendRequests = this.friendRequests.filter(request => request.id !== requestId);
+   
   }
 }
