# gamindie-ui/src/openapi/openapi.json
@@ -781,13 +781,22 @@
         }
       }
     },
-    "/posts/owner": {
+    "/posts/owner/{owner-id}": {
       "get": {
         "tags": [
           "Post"
         ],
         "operationId": "findAllPostsByOwner",
         "parameters": [
+          {
+            "name": "owner-id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
           {
             "name": "page",
             "in": "query",
@@ -928,22 +937,50 @@
         }
       }
     },
-    "/friendships/pending": {
+    "/friendships/pending/{userId}": {
       "get": {
         "tags": [
           "friend-ship-controller"
         ],
-        "operationId": "getPendingRequests",
+        "operationId": "getgetPendingRequestsFriends",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 10
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
             "content": {
               "*/*": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/FriendShip"
-                  }
+                  "$ref": "#/components/schemas/PageResponseFriendShipResponse"
                 }
               }
             }
@@ -951,45 +988,50 @@
         }
       }
     },
-    "/friendships/friends": {
+    "/friendships/friends/{userId}": {
       "get": {
         "tags": [
           "friend-ship-controller"
         ],
         "operationId": "getFriends",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/FriendShip"
-                  }
-                }
-              }
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 10
             }
           }
-        }
-      }
-    },
-    "/friendships/accepted": {
-      "get": {
-        "tags": [
-          "friend-ship-controller"
         ],
-        "operationId": "getAcceptedRequests",
         "responses": {
           "200": {
             "description": "OK",
             "content": {
               "*/*": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/FriendShip"
-                  }
+                  "$ref": "#/components/schemas/PageResponseFriendShipResponse"
                 }
               }
             }
@@ -2044,16 +2086,16 @@
           "name": {
             "type": "string"
           },
-          "accountNonExpired": {
-            "type": "boolean"
-          },
           "credentialsNonExpired": {
             "type": "boolean"
           },
-          "profilePicture": {
-            "type": "string"
+          "accountNonExpired": {
+            "type": "boolean"
           },
           "username": {
+            "type": "string"
+          },
+          "profilePicture": {
             "type": "string"
           },
           "authorities": {
@@ -2063,6 +2105,75 @@
             }
           },
           "accountNonLocked": {
+            "type": "boolean"
+          }
+        }
+      },
+      "FriendShipResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "status": {
+            "type": "string"
+          },
+          "senderId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "senderUsername": {
+            "type": "string"
+          },
+          "senderAvatar": {
+            "type": "string"
+          },
+          "receiverId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "receiverUsername": {
+            "type": "string"
+          },
+          "receiverAvatar": {
+            "type": "string"
+          },
+          "createdData": {
+            "type": "string",
+            "format": "date-time"
+          }
+        }
+      },
+      "PageResponseFriendShipResponse": {
+        "type": "object",
+        "properties": {
+          "content": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FriendShipResponse"
+            }
+          },
+          "number": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "size": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "totalElements": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "totalPages": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "first": {
+            "type": "boolean"
+          },
+          "last": {
             "type": "boolean"
           }
         }
